--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.coinLogo {
+  width: 50px;
+  height: 50px;
+}
