--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -16,3 +16,17 @@ code {
   width: 50px;
   height: 50px;
 }
+
+.favorite-active{
+  margin: 0px !important;
+  width: 50px;
+  height: auto;
+  font-size: 30px;
+}
+
+.favorite-inactive{
+  margin: 0px !important;
+  width: 50px;
+  height: auto;
+  font-size: 30px;
+}
