--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -13,20 +13,27 @@ code {
 }
 
 .coinLogo {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
 .favorite-active{
   margin: 0px !important;
-  width: 50px;
+  width: 60px;
   height: auto;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .favorite-inactive{
   margin: 0px !important;
-  width: 50px;
+  width: 60px;
   height: auto;
-  font-size: 30px;
+  font-size: 25px;
 }
+
+/* .ui-blue-basic-button {
+  margin: 0px !important;
+  width: 60px;
+  height: auto;
+  font-size: 25px;
+} */
