--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -26,7 +26,7 @@ code {
 
 .NavBar {
   margin-top: 50px;
-  margin-left: 50px;
+  margin-left: 695px;
   /* float: left */
 }
 
@@ -35,6 +35,14 @@ code {
  margin-right: 450px;
  margin-top: 400px;
 }
+
+.logo {
+  width: 20px;
+  height: 120px;
+  margin-left: 50px;
+}
+
+
 /* .favorite-active{
   width: 60px;
   height: auto;
